--- a/index.html
+++ b/index.html
@@ -71,6 +71,32 @@
     </div>
 </div>
 
+<div class="project container">
+    <div class="btn-toolbar pull-right" style="margin-top: 20px;">
+    </div>
+    <h3><a href="#">Android Application(3)</a> <small>September 1, 2020</small></h3>
+    <div class="row project-images">
+        <div class="col col-sm-8">
+            <p class="lead">Alarm Clock</p>
+            <div class="project-summary">
+                <p>
+                  As my third Android application assignment, I made an alarm clock. The application must be able to allow the user to add time-set alarms that are then displayed on a list on the main page. The alarm will ring on its allocated time, can be edited, switched on and off, and deleted. On my application, there is a menu bar on top with a "plus" button to its right. When the button is pushed, a time picker will pop up for you to pick the time for your alarm. After pressing "ADD", you will return to the main page, your new alarm will be added to the list for you to edit, delete, turn on and off, and listen to wonderful harmony of the alarm ringtone when it is played.
+                </p>
+
+            </div>
+            <p class="project-links">
+                Links: <a href="" target="_blank">Demo</a> &bull;
+                       <a href="https://github.com/nhat-nam/FUNiX/tree/master/project-3" target="_blank">GitHub</a>
+            </p>
+         </div>
+        <div class="col col-sm-4">
+        	<a href="https://youtu.be/geaPe1-aAQA"></a>
+            <img src="./project-3/img/android_application-3.png" class="img-responsive center-block"></a>
+        </div>
+        <div class="clearfix"></div>
+    </div>
+</div>
+
 
  </div>
     <div class="footer">
